jena-shex/src/test/files/spec/negativeSyntax/1literalFractiondigitsxsd-integer.shex
<http://a.example/S1> {
   <http://a.example/p1> LITERAL FRACTIONDIGITS "5"^^<http://www.w3.org/2001/XMLSchema#integer>
}
